# k2_bridge

./: .gitattributes  .gitignore  Kinect2Server.exe.config  Kinect2Server.sln  LICENSE.md  Microsoft.Kinect.Face.xml  README.md  basename.exe.stackdump  rm.exe.stackdump  sed.exe.stackdump  tr.exe.stackdump  uname.exe.stackdump
Kinect2Server/: App.config  App.xaml  App.xaml.cs  AsyncNetworkConnector.cs  AudioContainer.cs  DataContainers.cs  Kinect2Server.csproj  Kinect2ServerInstaller.cs  Kinect2ServerLauncher.cs  Kinect2ServerService.cs  Kinect2ServerTray.cs  KinectJointFilter.cs  MainWindow.xaml  MainWindow.xaml.cs  Thumbs.db  client code.docx
Kinect2Server/Json60r3/Source/Src/Newtonsoft.Json.Tests/: Thumbs.db
Kinect2Server/Json60r3/Source/Tools/NUnit/lib/Images/Tree/Classic/: Thumbs.db
Kinect2Server/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
k2_client/: .gitignore  CMakeLists.txt  LICENSE.md  README.md  mainpage.dox  package.xml
k2_client/launch/: k2_client.launch  k2_skel_only.launch
k2_client/msg/: Body.msg  Face.msg
k2_client/src/: audio.cpp  bodies.cpp  depth.cpp  faces.cpp  ir.cpp  k2_rosbag_on_skeleton.py  rgb.cpp  skeleton_draw.py
k2_server/: .gitignore  LICENSE.md
k2_server/Kinect2Server/: ContractResolver.cs  Kinect2Server.csproj  Kinect2ServerInstaller.cs
k2_server/Kinect2Server/Properties/: Resources.resx
